--- a/Udemy/Views/Vendedores/Details.cshtml
+++ b/Udemy/Views/Vendedores/Details.cshtml
@@ -23,13 +23,13 @@
             @Html.DisplayFor(model=>model.Email)
         </dd>
         <dt>
-            Data de nascimento
+            @Html.DisplayNameFor(model=>model.DataDeNascimento)
         </dt>
         <dd>
             @Html.DisplayFor(model=>model.DataDeNascimento)
         </dd>
         <dt>
-            Salário base
+            @Html.DisplayNameFor(model=>model.Salariobase)
         </dt>
         <dd>
             @Html.DisplayFor(model=>model.Salariobase)
