--- a/Udemy/Views/Vendedores/Create.cshtml
+++ b/Udemy/Views/Vendedores/Create.cshtml
@@ -20,15 +20,15 @@
                 <input asp-for="Vendedor.Email" class="form-control" />
             </div>
             <div class="form-group">
-                <label asp-for="Vendedor.DataDeNascimento" class="control-label">Data de nascimento</label>
+                <label asp-for="Vendedor.DataDeNascimento" class="control-label"></label>
                 <input asp-for="Vendedor.DataDeNascimento" class="form-control" />
             </div>
             <div class="form-group">
-                <label asp-for="Vendedor.Salariobase" class="control-label">Salário base</label>
+                <label asp-for="Vendedor.Salariobase" class="control-label"></label>
                 <input asp-for="Vendedor.Salariobase" class="form-control" />
             </div>
             <div class="form-group">
-                <label asp-for="Vendedor.DepartamentoId" class="control-label">Departamento</label>
+                <label asp-for="Vendedor.DepartamentoId" class="control-label"></label>
                 <select asp-for="Vendedor.DepartamentoId" asp-items="@(new SelectList(Model.Departamentos,"Id","Nome"))" class="form-control"></select>
             </div>
             <div class="form-group">
