--- a/Udemy/Views/Vendedores/Edit.cshtml
+++ b/Udemy/Views/Vendedores/Edit.cshtml
@@ -11,22 +11,27 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
+            <div asp-validation-summary="All" class="text-danger"></div>
             <input type="hidden" asp-for="Vendedor.Id" />
             <div class="form-group">
                 <label asp-for="Vendedor.Nome" class="control-label"></label>
                 <input asp-for="Vendedor.Nome" class="form-control" />
+                <span asp-validation-for="Vendedor.Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Vendedor.Email" class="control-label"></label>
                 <input asp-for="Vendedor.Email" class="form-control" />
+                <span asp-validation-for="Vendedor.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Vendedor.DataDeNascimento" class="control-label"></label>
                 <input asp-for="Vendedor.DataDeNascimento" class="form-control" />
+                <span asp-validation-for="Vendedor.DataDeNascimento" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Vendedor.Salariobase" class="control-label"></label>
                 <input asp-for="Vendedor.Salariobase" class="form-control" />
+                <span asp-validation-for="Vendedor.Salariobase" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Vendedor.DepartamentoId" class="control-label"></label>
@@ -38,3 +43,9 @@
         </form>
     </div>
 </div>
+
+@section Scripts{
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
